--- a/config/config.ini
+++ b/config/config.ini
@@ -11,3 +11,10 @@ DbPort = 3306
 DbUser = root
 DbPassWord = 12345678
 DbName = ginblog
+
+[qiniu]
+Zone = 3 # 1:华东/华东-浙江;2:华北;3:华南,不填默认华北。境外服务器特殊使用环境自行配置
+AccessKey =
+SecretKey =
+Bucket =
+QiniuSever =
